fixing alignt issues

--- a/src/pages/VotingPage.scss
+++ b/src/pages/VotingPage.scss
@@ -8,7 +8,15 @@
   --secondary50Brighter: #a4c5be;
   --tertiary50Brighter: #57b3d9;
 }
-
+.voteControlRow
+{
+  width: auto;
+  row-gap: 10px;
+}
+.voteCol
+{
+  width: 100px;
+}
 .row {
   text-align: center;
   justify-content: center;
@@ -64,6 +72,11 @@ svg {
     flex: unset;
     padding-bottom: 50px;
 
+  }
+  .small
+  {
+    height: 0;
+    padding:0;
   }
 }
 .questionTitle
